<resources>
    <string name="app_name">摩助</string>


    <!--login or register-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login">摩助登录</string>
    <string name="tv_login_guide">摩助欢迎您！</string>
    <string name="tv_keep_password">记住密码</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="btn_login">登录</string>
    <string name="tv_register_new">新用户注册</string>
    <string name="hint_phone_number">请输入手机号</string>
    <string name="hint_password">请输入6&#8211;12位密码</string>
    <string name="tv_resetting_password">重置密码</string>
    
    
    
    <string name="tv_message">消息</string>
    <string name="tv_my">我的</string>
    <string name="tv_apply">应用</string>
    <string name="tv_contact">通讯录</string>
    <string name="tv_home">首页</string>
    
    <!--home_pager-->
    <string name="tv_title">苏宁天宇</string>
    <string name="tv_search">搜索</string>
    <string name="tv_news">这个是新闻的标题</string>
    <string name="tv_test_content">测公告内容</string>
    <string name="tv_notice">公告</string>
    <string name="item_tv">巡检</string>
    <string name="work_attendance">考勤</string>
    <string name="work_attendance_statistics">考勤统计</string>
    <string name="routing_inspection">巡检</string>
    <string name="routing_inspection_statistics">巡检统计</string>
    <string name="project_setting">项目设置</string>
    <string name="train">培训</string>
    <string name="work_show">工作秀</string>
    <string name="report_job">报岗</string>
    <string name="report_job_statistics">报岗统计</string>
    <string name="personable_photo">随手拍</string>
    <string name="train_statistics">培训统计</string>
    <string name="form_upload">表单上传</string>
    <string name="guest_pass">访客通行</string>
    <string name="meting">会议</string>
    <string name="tv_register">摩助注册</string>
    <string name="tv_work">工作</string>
    <string name="tv_manager">物管</string>
    <!--register-->
    <string name="hint_input_code">请输入验证码</string>
    <string name="btn_code">获取验证码</string>
    <string name="ed_certain_password">请确认密码</string>
    <string name="tv_aggrement">我已阅读并同意物管家服务协议</string>
    <string name="btn_next">下一步</string>
    <string name="find_passwd_send_countdown">重新发送(%sS)</string>
    <string name="tv_information_title">个人信息完善</string>
    <string name="tv_camera">去拍照</string>
    <string name="tv_upload_positive">请拍下身份证人像面</string>
    <string name="tv_upload_negative">请拍下身份证国徽面</string>
    <string name="tv_submit">提交</string>
    <string name="tv_height">身高</string>
    <string name="tv_qualifications">学历</string>
    <string name="tv_empty">未填写</string>
    <string name="tv_marry_state">婚姻状况</string>
    <string name="height_value">175cm</string>
    <string name="address_now">现居住地址</string>
    <string name="contacts_tv">紧急联系人</string>
    <string name="now_work">现单位名称</string>
    <string name="tv_industry">行业</string>
    <string name="tv_skill">技能</string>
    <string name="tv_employment">应聘渠道</string>
    <string name="tv_commite">提交</string>
    <string name="hint_height">请输入你的身高 例如175cm</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="primary">小学</string>
    <string name="middle">初中</string>
    <string name="tv_height_school">高中</string>
    <string name="university">本科</string>
    <string name="junior_college">专科</string>
    <string name="graduate">研究生</string>
    <string name="doctor">博士</string>
    <string name="married">已婚</string>
    <string name="single">未婚</string>
    <string name="hint_address">请输入您的现居住地址</string>
    <string name="relation_tv">联系人与本人的关系</string>
    <string name="hint_contact_phone">请输入紧急联系人的电话</string>
    <string name="tv_save">保存</string>
    <string name="hint_now_work">请输入您的现单位名称</string>
    <string name="tv_security">保安</string>
    <string name="fire_protection">消防</string>
    <string name="project">工程</string>
    <string name="clean">保洁</string>
    <string name="customer">客服</string>
    <string name="other">其它</string>
    <string name="tip_skill">＊最多可以选择3个技能！</string>
    <string name="tv_driving">驾照</string>
    <string name="channel_first">赶集网</string>
    <string name="channel_second">58同城</string>
    <string name="channel_third">朋友介绍</string>
    <string name="channel_fourth">劳务介绍所</string>
    <string name="labour_service">请输入劳务介绍所名称</string>
    <string name="phone_hint">请输入劳务介绍所的电话号码</string>
    <string name="friend_name">请输入朋友的姓名</string>
    <string name="friend_phone">请输入朋友的电话号码</string>
    <string name="modify_password">恭喜您!密码设置成功</string>
    <string name="go_login">去登陆</string>
    <!--personal_center-->
    <string name="personal_name">姓名</string>
    <string name="personal_phone">手机号：18817772486</string>
    <string name="alert_setting">提醒设置</string>
    <string name="version">版本信息</string>
    <string name="tv_personal_center">个人中心</string>
    <string name="avatar">头像</string>
    <string name="qr_code">二维码名片</string>
    <string name="identity_card">身份证信息</string>
    <string name="personal_information">个人信息</string>
    <string name="bank_card">银行卡号</string>
    <string name="security_certificate">保安证号</string>
    <string name="upload_avatar">上传头像</string>
    <string name="tv_photo">相册</string>
    <string name="tv_take_camera">拍照</string>
    <string name="barcode">分享自己的名片，让他人更加了解你</string>
    <string name="bank_card_hint">请输入银行卡号</string>
    <string name="tip_industry">最多选择三个行业</string>
    <string name="input_security_hint">请输入保安证号</string>
    <string name="tv_work_experience">工作经验</string>
    <string name="tv_work_content">可从事工作内容</string>
    <string name="btn_know">我了解了</string>
    <string name="btn_exit_account">退出账户</string>
    <string name="attendance_work">考勤提醒</string>
    <string name="report_alert">报岗提醒</string>
    <string name="routing_alert">巡检提醒</string>
    <string name="open_checkbox">开启考勤提醒</string>
    <string name="tv_sign_start_time">签到提醒时间</string>
    <string name="go_setting">去设置</string>
    <string name="tv_sign_out">签退提醒设置</string>
    <string name="tv_alert">提醒</string>
    <string name="tv_save_success">保存成功</string>
    <string name="register_success">注册成功</string>
    <string name="company">公司</string>
    <string name="personal">个人</string>
    <string name="tv_information_perfect">信息完善</string>
    <string name="hint_company_address">请输入贵公司的办公地址</string>
    <string name="business_licence_upload">营业执照上传</string>
    <string name="upload_business_licence">上传营业执照</string>
    <string name="legal_card_upload">法人身份证上传</string>
    <string name="upload_card_front">上传身份证人像面</string>
    <string name="upload_card_back">上传身份证国徽面</string>
    <string name="check_update">检测更新</string>
    <string name="version_code">版本号1.0</string>
    <string name="updated">已是最新版本</string>
    <string name="abnormal_alert">异常处理通知</string>
    <string name="birthday_alert">生日提醒</string>
    <string name="notify_alert">通知</string>
    <string name="to_do_alert">待办事项提醒</string>
    <string name="item_title">会议室申请</string>
    <string name="item_date_apply">2017–04-17 15:30</string>
    <string name="item_meeting_name">会议名称</string>
    <string name="home_application">首页应用</string>
    <string name="tv_select_company">选择公司</string>
    <string name="select_company">选择公司</string>
    <string name="create_company">创建公司</string>
    <string name="linkman">联系人</string>
    <string name="linkman_name">张三</string>
    <string name="tv_key_personal_setting">关键人物信息设置</string>
    <string name="tv_add"><u>去添加</u></string>
    <string name="tv_exchange_work_setting">交接班设置</string>
    <string name="tv_work_training_setting">岗位培训设置</string>
    <string name="tv_class_setting">班次设置</string>
    <string name="tv_attendance_setting">考勤设置</string>
    <string name="post_work_setting">岗位设置</string>
    <string name="report_post_setting">报岗设置</string>
    <string name="tv_round_point_setting">巡检点位设置</string>
    <string name="tv_round_way_setting">巡检线路设置</string>
    <string name="apply_time_work"><u>申请工时</u></string>
    <string name="add_round_line"><u>添加巡检线路</u></string>

    <string name="look_error_labor">异常详情</string>
    <string name="project_personal_setting">项目人员设置</string>
    <string name="tv_detail"><u>详细</u></string>
    <string name="tv_detail_look"><u>查看详情</u></string>
    <string name="tv_leave_people"><u>离职人员</u></string>
    <string name="tv_add_people"><u>新增人员</u></string>
    <string name="test_distance">岗&#8195;&#8195;位&#8195;</string>
    <string name="tv_report_post_time">报岗时间&#8195;</string>

</resources>
