<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/tv_qualifications"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  android:textColor="@color/white"
        />


    </RelativeLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="150dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">


            <TextView
                android:id="@id/tv_primary"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/primary"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_middle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/middle"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_height_school"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/tv_height_school"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_junior_college"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/junior_college"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_university"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/university"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_graduate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/graduate"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>
            <TextView
                android:id="@id/tv_doctor"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/doctor"
                android:textSize="@dimen/text_large_size"
                android:textColor="@color/titleColor"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white_light"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/height_btn_nor"
                  android:layout_margin="18dp">
        <Button android:id="@id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/ic_button_cancel"
                android:textSize="@dimen/text_large_size"
                android:text="@string/btn_cancel"/>
        <Button
            android:id="@id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_large_size"
            android:background="@mipmap/bg_submit_button"
            android:text="@string/btn_ok"/>

    </LinearLayout>
</LinearLayout>