<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/tv_marry_state"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  android:textColor="@color/white"
        />

    </RelativeLayout>

    <TextView
        android:id="@id/tv_single"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/single"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/text_large_size"
    />
    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/white_light"/>
    <TextView
        android:id="@id/tv_married"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/married"
        android:textSize="@dimen/text_large_size"
        android:textColor="@color/titleColor"
    />
    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/white_light"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/height_btn_nor"
                  android:layout_margin="18dp"
                >
        <Button android:id="@id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/bg_submit_button"
                android:text="@string/btn_cancel"
                android:textSize="@dimen/text_large_size"
        />
        <Button
            android:id="@id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@mipmap/bg_submit_button"
            android:text="@string/btn_ok"
            android:textSize="@dimen/text_large_size"
        />

    </LinearLayout>
</LinearLayout>