<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/tv_employment"
                  android:textColor="@color/white"
                  android:textSize="@dimen/text_title_size"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@id/linear_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@id/tv_first"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/channel_first"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_large_size"
        />

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/white_light"/>
        <TextView
            android:id="@id/tv_second"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/channel_second"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_large_size"
        />

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/white_light"/>
        <TextView
            android:id="@id/tv_third"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/channel_third"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_large_size"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/white_light"/>
        <TextView
            android:id="@id/tv_fourth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/channel_fourth"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_large_size"
        />
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/white_light"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/linear_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/font_size_18sp"
            android:layout_marginStart="@dimen/font_size_18sp"
            android:layout_marginTop="10dp"
            android:text="@string/channel_fourth"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_title_size"/>

        <EditText
            android:id="@id/labour_work"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="@dimen/font_size_18sp"
            android:layout_marginLeft="@dimen/font_size_18sp"
            android:layout_marginRight="@dimen/font_size_18sp"
            android:layout_marginStart="@dimen/font_size_18sp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_edit_text_light"
            android:hint="@string/labour_service"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/titleColor"
            android:textColorHint="@color/textHintColor"
            android:textSize="@dimen/text_large_size"/>
        <EditText
            android:id="@id/labour_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="@dimen/font_size_18sp"
            android:layout_marginLeft="@dimen/font_size_18sp"
            android:layout_marginRight="@dimen/font_size_18sp"
            android:layout_marginStart="@dimen/font_size_18sp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_edit_text_light"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/titleColor"
            android:textColorHint="@color/textHintColor"
            android:textSize="@dimen/text_large_size"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/height_btn_nor"
                  android:layout_margin="18dp">
        <Button android:id="@id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/ic_button_cancel"
                android:text="@string/btn_cancel"
                android:textSize="@dimen/text_large_size"
        />
        <Button
            android:id="@id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@mipmap/bg_submit_button"
            android:text="@string/btn_ok"
            android:textSize="@dimen/text_large_size"
        />

    </LinearLayout>
</LinearLayout>