<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/tv_industry"
                  android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/font_size_18sp"
                    android:layout_marginLeft="@dimen/font_size_18sp"
                    android:layout_marginRight="@dimen/font_size_18sp"
                    android:layout_marginStart="@dimen/font_size_18sp"
                    android:layout_marginTop="@dimen/font_size_18sp"
                    android:gravity="center_horizontal"
    >
        <CheckBox
            android:id="@id/checkbox_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/tv_security"
        />

        <CheckBox
            android:id="@id/checkbox_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/checkbox_first"
            android:layout_toRightOf="@id/checkbox_first"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/fire_protection"
        />
        <CheckBox
            android:id="@id/checkbox_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/checkbox_second"
            android:layout_toRightOf="@id/checkbox_second"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/project"
        />
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/font_size_18sp"
                  android:layout_marginLeft="@dimen/font_size_18sp"
                  android:layout_marginRight="@dimen/font_size_18sp"
                  android:layout_marginStart="@dimen/font_size_18sp"
                  android:layout_marginTop="10dp"
                  android:gravity="center_horizontal">
        <CheckBox
            android:id="@id/checkbox_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/clean"
        />
        <CheckBox
            android:id="@id/checkbox_fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/customer"
        />
        <CheckBox
            android:id="@id/checkbox_sixth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:button="@null"
            android:background="@drawable/checkbox_select_button"
            android:gravity="center"
            android:textColor="@color/titleColor"
            android:text="@string/other"
        />
    </LinearLayout>

    <Button
        android:id="@id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="@dimen/margin_height_normal_distance"
        android:layout_marginLeft="@dimen/margin_height_normal_distance"
        android:layout_marginRight="@dimen/margin_height_normal_distance"
        android:layout_marginStart="@dimen/margin_height_normal_distance"
        android:layout_marginTop="25dp"
        android:background="@mipmap/bg_submit_button"
        android:text="@string/tv_save"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"/>
</LinearLayout>