<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <TextView android:layout_width="match_parent"
              android:layout_height="?android:actionBarSize"
              android:background="@color/colorPrimary"
              android:gravity="center"
              android:text="@string/tv_alert"
              android:textColor="@color/white"
              android:textSize="@dimen/text_title_size"/>
    <ImageView android:layout_width="72dp"
               android:layout_height="72dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="24dp"
               android:layout_marginBottom="10dp"
               android:src="@mipmap/ic_success_dialog"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/tv_save_success"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:textColor="@color/titleColor"/>
    <Button android:id="@id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_height_larger_distance"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/bg_submit_button"
            android:textSize="12sp"
            android:text="@string/btn_ok"/>

</LinearLayout>