<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/tv_height"
                  android:textAppearance="@style/TextAppearance.AppCompat.Title"
                  android:textColor="@color/white"
        />


    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/margin_height_larger_distance"
                  android:layout_marginBottom="24dp"
                  android:layout_marginEnd="@dimen/font_size_18sp"
                  android:layout_marginLeft="@dimen/font_size_18sp"
                  android:layout_marginRight="@dimen/font_size_18sp"
                  android:layout_marginStart="@dimen/font_size_18sp"
                  android:layout_marginTop="36dp"
                  android:background="@mipmap/bg_edit_text_light">
        <EditText
            android:id="@id/edit_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/hint_height"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/titleColor"
            android:textColorHint="@color/gray"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/height_btn_nor"
                  android:layout_margin="18dp">
        <Button android:id="@id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/bg_submit_button"
                android:text="@string/btn_cancel"/>
        <Button
            android:id="@id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@mipmap/bg_submit_button"
            android:text="@string/btn_ok"/>

    </LinearLayout>
</LinearLayout>